<resources>
    <string name="app_name">AkiJob</string>
    <string name="action_login">ENTRAR</string>
    <string name="copyright">© Copyright 2016 VERSALIUS</string>
    <string name="forgot_password"><u>Esqueceu sua senha?</u></string>
    <string name="singup"><u>Cadastre-se</u></string>
    <string name="dont_have_acc">Não possui uma conta?</string>

    <!--Titles-->
    <string name="title_signup">CADASTRO</string>
    <string name="title_dialog_permission">Permissão requerida</string>

    <!--Hints-->
    <string name="hint_service">Serviço</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_city_required">Cidade *</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_required">Email *</string>
    <string name="hint_cpf_required">CPF *</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_required">Senha *</string>
    <string name="hint_full_name">Nome Completo *</string>
    <string name="hint_password_again">Repita a senha</string>
    <string name="hint_state">Estado *</string>
    <string name="hint_birth_date">Data de nascimento *</string>
    <string name="hint_phone">Telefone *</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>
    <string name="hint_site">Site</string>

    <!--Labels-->
    <string name="lb_radio_male">Masculino</string>
    <string name="lb_radio_female">Feminino</string>
    <string name="lb_gender">Sexo *</string>
    <string name="lb_facebook">facebook.com/</string>
    <string name="lb_twitter">twitter.com/</string>
    <string name="lb_site">http://</string>

    <!--Mensagens de erros-->
    <string name="err_msg_service">Insira um serviço</string>
    <string name="err_msg_city">Insira uma cidade</string>
    <string name="err_msg_empty_name">Insira o nome completo</string>
    <string name="err_msg_empty_email">Insira um e-mail válido</string>
    <string name="err_msg_empty_cpf">Insira um CPF válido</string>
    <string name="err_msg_invalid_email">Email inválido</string>
    <string name="err_msg_invalid_site">Site inválido</string>
    <string name="err_msg_invalid_facebook">Facebook inválido</string>
    <string name="err_msg_invalid_twitter">Twitter inválido</string>
    <string name="err_msg_short_password">A senha deve possuir de 6 a 22 caracteres</string>
    <string name="err_msg_dont_match_password">As senhas não são iguais</string>
    <string name="err_msg_invalid_birthday">Data de nascimento inválida</string>
    <string name="err_msg_must_select_one">Selecione uma opção</string>
    <string name="err_msg_invalid_phone">Número inválido</string>
    <string name="hint_city_spinner">Selecione uma cidade…</string>
    <string name="err_msg_must_select_city">Selecione uma cidade</string>
    <string name="err_msg_must_select_state">Selecione um estado</string>
    <string name="err_msg_existing_email">Este email já está em uso</string>
    <string name="err_msg_server_fail">Houve uma falha. Tente novamente mais tarde.</string>
    <string name="dialog_permission_agree_button">Ok</string>
    <string name="dialog_permission_disagree_button">Cancelar</string>
    <string name="title_crop_activity">Cortar Imagem</string>
    <string name="err_msg_invalid_cpf">CPF inválido</string>
    <string name="err_msg_existing_cpf">Este CPF já está cadastrado</string>

    <!--Arrays-->
    <string-array name="array_states">
        <item>Selecione um estado…</item> <!-- Valor default -->
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>Sergipe</item>
        <item>São Paulo</item>
        <item>Tocantins</item>
    </string-array>
    <string-array name="array_states_uf">
        <item>UF</item> <!-- Valor default -->
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
    <string-array name="array_states_id">
        <item>0</item> <!-- Valor default -->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>
</resources>
